A       html/images/CAT_PBT_for_SPM.png
D       spm_spm_changed.m
M       tbx_cfg_cat.m

(1) Fixed: Added function to read old xml-files for mean ROI estimation.
(2) Fixed: Incorrected tag for estwrite_spm.
(3) Fixed: Added SurfaceID metadata entry for resampled data to be compatible
    to new SPM12 update.
(4) Changed: Deselected ROI estimation for long. mode for inital segmentation 
    of average image.
(5) Changed: Commented out usefolder tag for ROI estimation and changed
    name for decimal_point according to its tag name.
(6) Removed: spm_spm_changed.m that is not necessary anymore.

------------------------------------------------------------------------
r1046 | gaser | 2016-10-25 11:39:25 +0200 (Di, 25 Okt 2016) | 8 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_vol_groupwise_ls.m
M       html/cat.html

Fixed: cat_vol_groupwise_ls.m was not working with the updated version.

------------------------------------------------------------------------
r1047 | gaser | 2016-10-25 17:53:58 +0200 (Di, 25 Okt 2016) | 12 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_conf_tools.m
A       cat_stat_spm2x.m
D       cat_stat_spmF2x.m
D       cat_stat_spmT2x.m
M       html/cat.html
 M      html/images/CAT_PBT_for_SPM.png

Changed: Conversion from spmT/F maps is now done using cat_stat_spm2x.m

------------------------------------------------------------------------
r1048 | gaser | 2016-10-25 18:01:41 +0200 (Di, 25 Okt 2016) | 6 lines

Changed paths:
M       CHANGES.txt
M       cat_stat_spm2x.m

Changed: Conversion from spmT/F maps is now done using cat_stat_spm2x.m

------------------------------------------------------------------------

Changed paths:
M       CHANGES.txt
M       cat_long_main.m
MM      cat_stat_spm2x.m

Changed: Added Dartel export for each time point to longitudinal mode.
------------------------------------------------------------------------
r1049 | gaser | 2016-10-25 20:41:20